--- a/estilo.css
+++ b/estilo.css
@@ -194,6 +194,7 @@ html{
     color: #fff;
     position: relative;
     z-index: 10;
+    border-radius: 5px;
 }
 .sobremi button .overlay{
     position: absolute;
@@ -204,6 +205,7 @@ html{
     background-color: #00bfa6	;
     z-index: -1;
     transition: 1s;
+    border-radius: 5px;
 }
 .sobremi button:hover .overlay{
     width: 100%;
